--- a/views/shamer/mainStyle.scss
+++ b/views/shamer/mainStyle.scss
@@ -15,3 +15,21 @@
 .hidden-audio{
 	display: none;
 }
+
+.bellAnimation{
+    -webkit-animation:spin 1s linear;
+    -moz-animation:spin 1s linear;
+    animation:spin 1s linear;
+    transform-origin: 50% 0%;
+}
+@keyframes spin { 
+  33% { 
+  -webkit-transform: rotate(45deg);         transform:rotate(45deg); 
+  }
+  66%{
+    -webkit-transform: rotate(45deg);         transform:rotate(-45deg); 
+  }
+  100%{
+    -webkit-transform: rotate(0deg);         transform:rotate(0deg); 
+  }
+}
