--- a/views/shamer/mainStyle.scss
+++ b/views/shamer/mainStyle.scss
@@ -22,14 +22,38 @@
     animation:spin 1s linear;
     transform-origin: 50% 0%;
 }
+
+@-moz-keyframes spin {
+  	33% {
+  		-moz-transform: rotate(45deg); 
+	} 
+	66% {
+  		-moz-transform: rotate(-45deg); 
+	} 
+	100% {
+  		-moz-transform: rotate(0deg); 
+	} 
+}
+@-webkit-keyframes spin { 
+	33% { 
+		-webkit-transform: rotate(45deg); 
+	} 
+	66% { 
+		-webkit-transform: rotate(-45deg); 
+	} 
+	100% { 
+		-webkit-transform: rotate(0deg); 
+	} 
+}
+
 @keyframes spin { 
-  33% { 
-  -webkit-transform: rotate(45deg);         transform:rotate(45deg); 
-  }
-  66%{
-    -webkit-transform: rotate(45deg);         transform:rotate(-45deg); 
-  }
-  100%{
-    -webkit-transform: rotate(0deg);         transform:rotate(0deg); 
-  }
+	33% { 
+		-webkit-transform: rotate(45deg);         transform:rotate(45deg); 
+	}
+	66%{
+		-webkit-transform: rotate(45deg);         transform:rotate(-45deg); 
+	}
+	100%{
+		-webkit-transform: rotate(0deg);         transform:rotate(0deg); 
+	}
 }
