--- a/views/buildAlert/testBoard.scss
+++ b/views/buildAlert/testBoard.scss
@@ -62,5 +62,45 @@ body{
 	background-image: url(../../public/img/ocean.png);
 }
 
+.bellAnimation{
+	-webkit-animation:spin 1s linear;
+	-moz-animation:spin 1s linear;
+	animation:spin 1s linear;
+	transform-origin: 50% 0%;
+}
 
+@-moz-keyframes spin {
+	33% {
+		-moz-transform: rotate(45deg);
+	}
+	66% {
+		-moz-transform: rotate(-45deg);
+	}
+	100% {
+		-moz-transform: rotate(0deg);
+	}
+}
+@-webkit-keyframes spin {
+	33% {
+		-webkit-transform: rotate(45deg);
+	}
+	66% {
+		-webkit-transform: rotate(-45deg);
+	}
+	100% {
+		-webkit-transform: rotate(0deg);
+	}
+}
+
+@keyframes spin {
+	33% {
+		-webkit-transform: rotate(45deg);         transform:rotate(45deg);
+	}
+	66%{
+		-webkit-transform: rotate(45deg);         transform:rotate(-45deg);
+	}
+	100%{
+		-webkit-transform: rotate(0deg);         transform:rotate(0deg);
+	}
+}
 
