--- a/views/buildAlert/testBoard.scss
+++ b/views/buildAlert/testBoard.scss
@@ -4,6 +4,10 @@
 	box-shadow: 0px 5px 5px rgba(136,136,136,.4);
 }
 
+.hidden-audio{
+	display: none;
+}
+
 .container{
 	width: 970px;
 	font-size: 18px;
