Settings page work

--- a/views/buildAlert/testBoard.scss
+++ b/views/buildAlert/testBoard.scss
@@ -27,9 +27,6 @@
 }
 
 .setting-button{
-	float: right;
-	height: 90px;
-	margin-right: 20px;
 	background-color: transparent;
 	border: none;
 }
@@ -40,6 +37,16 @@
 
 .nav-item{
 	display: inline-block;
+	padding-top: 13px;
+    padding-right: 10px;
+}
+
+.nav-item-right{
+	float: right;
+	display: inline-block;
+	height: 90px;
+	margin-right: 20px;
+	margin-top: 3px;
 }
 
 .bell{
@@ -74,6 +81,10 @@
 
 .white {
 	color: rgb(235,235,235);
+}
+
+.logo {
+	height: 45px;
 }
 
 body{
