--- a/views/buildAlert/testBoard.scss
+++ b/views/buildAlert/testBoard.scss
@@ -14,6 +14,7 @@
 	line-height: 1.5;
 	height: 700px;
 	overflow-y: auto;
+	margin-top: 30px;
 }
 
 .blog-nav-item{
@@ -47,6 +48,10 @@
 	height: 90px;
 	margin-right: 20px;
 	margin-top: 3px;
+}
+
+.setting-row {
+	margin: 5px !important;
 }
 
 .bell{
