--- a/views/buildAlert/buildAlert.scss
+++ b/views/buildAlert/buildAlert.scss
@@ -3,6 +3,17 @@
 	height: 90px;
 	box-shadow: 0px 5px 5px rgba(136,136,136,.4);
 }
+.weather-row{
+	margin-left: 0px !important;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+.weather-card{
+	height: 290px;
+	width: 120px !important;
+	margin-right: 5px;
+	background: rgba(225, 225, 232, .5);
+}
 
 .hidden-audio{
 	display: none;
