--- a/views/buildAlert/buildAlert.scss
+++ b/views/buildAlert/buildAlert.scss
@@ -13,6 +13,11 @@
 	width: 120px !important;
 	margin-right: 5px;
 	background: rgba(225, 225, 232, .5);
+	text-align: center;
+}
+
+.wi{
+	font-size: 44px !important;
 }
 
 .hidden-audio{
