--- a/views/buildAlert/buildAlert.scss
+++ b/views/buildAlert/buildAlert.scss
@@ -7,11 +7,12 @@
 	margin-left: 0px !important;
 	margin-top: 5px;
 	margin-bottom: 5px;
+	width: 100%;
 }
 .weather-card{
 	height: 290px;
-	width: 120px !important;
-	margin-right: 5px;
+	width: 19.05% !important;
+	margin-left: 0.8%;
 	background: rgba(225, 225, 232, .5);
 	text-align: center;
 }
